--- a/configs/transformer/run_transformer_non_repeating_10_value_negative_expanded.yaml
+++ b/configs/transformer/run_transformer_non_repeating_10_value_negative_expanded.yaml
@@ -1,5 +1,5 @@
-data_dir: /home/weiyu/Research/Multimodal_Perception/multimodal_interactive_perception/data/role_value_data_non_repeating_10_value_negative_expanded
-experiment_dir: /home/weiyu/Research/Multimodal_Perception/multimodal_interactive_perception/experiments/${env:DATETIME}
+data_dir: /home/weiyu/Research/LINK/data/role_value_data_non_repeating_10_value_negative_expanded
+experiment_dir: /home/weiyu/Research/LINK/experiments/${env:DATETIME}
 validation_query_roles:
   - material
   - purity
@@ -30,7 +30,7 @@ label_smooth: 0.1
 max_arity: 24
 
 # training
-device: 1
+device: 0
 batch_size: 128
 max_epochs: 100
 learning_rate: 0.0001
@@ -53,3 +53,4 @@ pooling_method: None
 use_mask_pos_output: True
 
 model: Transformer
+save_model: True
